# iron-arch

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  EXAMPLES.md  LICENSE  README.md  RELEASE.md  clippy.toml  rustfmt.toml  user-workflow.md
.claude/: CLAUDE.md
.claude/agents/: analyst.md  architect.md  developer.md  discovery.md  orchestrator.md  reviewer.md  tester.md
.claude/commands/: discover.md  workflow.md
.claude/conventions/: CLAUDE.md  code-quality.md  documentation.md  git-discipline.md
.claude/skills/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
bundles/cosmic/: bundle.toml
bundles/cosmic/scripts/: setup-cosmic.sh
bundles/gnome/: bundle.toml
bundles/hyprland/: bundle.toml
bundles/kde/: bundle.toml
bundles/niri/: bundle.toml
crates/iron-cli/: Cargo.toml
crates/iron-cli/src/: cli.rs  context.rs  main.rs  output.rs  progress.rs
crates/iron-cli/src/commands/: apply.rs  bundle.rs  clean.rs  diff.rs  doctor.rs  history.rs  host.rs  import.rs  init.rs  install.rs  mod.rs  module.rs  plan.rs  profile.rs  recover.rs  scan.rs  secrets.rs  security.rs  snapshot.rs  status.rs  sync.rs  update.rs  validate.rs
crates/iron-cli/tests/: cli_integration.rs  cli_output_validation.rs
crates/iron-cli/tests/acceptance/: at1_first_time_setup.rs  at2_bundle_management.rs  at3_profile_management.rs  at4_module_operations.rs  at5_update_workflow.rs  at6_recovery_workflow.rs  fixtures.rs  main.rs
crates/iron-core/: Cargo.toml
crates/iron-core/proptest-regressions/services/: state.txt
crates/iron-core/src/: actual_state.rs  availability.rs  bundle.rs  envelope.rs  error.rs  fs_trait.rs  host.rs  import.rs  install.rs  lib.rs  logging.rs  module.rs  packages.rs  profile.rs  snapshot.rs  snapshot_fixtures.rs  state.rs  system_service.rs  templates.rs  test_helpers.rs  validation.rs
crates/iron-core/src/resilience/: circuit_breaker.rs  command_executor.rs  mock_executor.rs  mod.rs
crates/iron-core/src/services/: apply.rs  bundle.rs  clean.rs  doctor.rs  drift.rs  history.rs  host.rs  mod.rs  module.rs  profile.rs  recovery.rs  scan.rs  secrets.rs  security.rs  snapshot_service.rs  state.rs  sync.rs  update.rs
crates/iron-core/tests/: scan_integration.rs  toml_parsing.rs
crates/iron-core/tests/fixtures/bundles/test-bundle/: bundle.toml
crates/iron-core/tests/fixtures/modules/invalid-ordering/: module.toml
crates/iron-core/tests/fixtures/modules/valid-module/: module.toml
crates/iron-core/tests/fixtures/modules/valid-module/config/: test.conf
crates/iron-core/tests/fixtures/profiles/minimal-profile/: profile.toml
crates/iron-core/tests/fixtures/profiles/test-profile/: profile.toml
crates/iron-fs/: Cargo.toml
crates/iron-fs/src/: lib.rs
crates/iron-git/: Cargo.toml
crates/iron-pacman/: Cargo.toml
crates/iron-pacman/src/: lib.rs  test_fixtures.rs
crates/iron-systemd/: Cargo.toml
crates/iron-tui/: Cargo.toml
crates/iron-tui/src/: app.rs  event.rs  install_wizard.rs  lib.rs  message.rs  screen.rs  terminal.rs  ui.rs  widgets.rs  wizard.rs
crates/iron-tui/src/app/: actions.rs  handlers.rs  mod.rs
crates/iron-tui/src/ui/: apply.rs  bundles.rs  clean.rs  config.rs  dashboard.rs  doctor.rs  host_selection.rs  install_wizard.rs  maintenance.rs  mod.rs  module_creator.rs  modules.rs  operation_log.rs  profile_builder.rs  profiles.rs  recovery.rs  secrets.rs  security.rs  settings.rs  snapshot.rs  system_scan.rs  tests.rs  theme.rs  update.rs  utils.rs  wizard.rs
crates/iron-tui/src/widgets/: mod.rs  progress.rs
docs/: TODO-scenario1.md  architecture.md  current.md  dotfiles-management.md  install-master-script.md  mid-level-user-expectations-brainstorm.md  newcomer-expectations-brainstorm.md  phase0-kanban.md  phase0-technical-guide.md  phase1-kanban.md  phase1-technical-guide.md  phase2-gap-analysis.md  phase2-kanban.md  phase2-technical-guide.md  phase3-kanban.md  phase3-technical-guide.md  pre-phase3-concerns.md  pre-phase3-reasoning.md  pre-phase3-technicals.md  product-review-and-roadmap.md  project-brief.md  requirements.md  scenario-1-hardening.md  scenario-1-phase-1.md  scenario-1-phase-2.md  scenario-1-phase-3.md  scenario-1-phase-4.md  scenario-1-phase-7.md  scenario-1-phase-9.md  tui-testing-guide.md  use-cases.md
docs/architecture/: API.md  ARCHITECTURE.md
docs/decisions/: scenario-1-phase-1.md  scenario-1-phase-5.md  scenario-1-phase-6.md  scenario-1-phase-7.md  scenario-1-phase-8.md
docs/dev/: CONTRIBUTING.md
docs/guide/: USER-GUIDE.md
docs/requirements/: REQUIREMENTS-SPEC-v1.0.md
docs/testing/: TEST-RESULTS-20260213.md  TESTING-WORKFLOW.md  tarpaulin-report.html
docs/workflow/: IMPLEMENTATION-PLAN.md  PARTIAL-UPDATE-RECOVERY-WORKFLOW.md
hosts/: archlinux.toml  desktop.toml  notebook.toml
hosts/desktop/: host.toml
iron-test/.config/: kitty
iron-test/hosts/: archlinux.toml
modules/apparmor/: module.toml
modules/audio-bluetooth/: module.toml
modules/audit/: module.toml
modules/dev-tools/: module.toml
modules/dns-security/: module.toml
modules/fail2ban/: module.toml
modules/fish/: module.toml
modules/fonts-theming/: module.toml
modules/git-config/: module.toml
modules/intrusion-detection/: module.toml
modules/kernel-hardening/: module.toml
modules/kitty-dev/: module.toml
modules/nvim-ide/: module.toml
modules/password-policy/: module.toml
modules/performance-tuning/: module.toml
modules/sandboxing/: module.toml
modules/ssh-config/: module.toml
modules/ssh-hardening/: module.toml
modules/starship-prompt/: module.toml
modules/tmux-config/: module.toml
modules/ufw/: module.toml
modules/waybar-dev/: module.toml
pkg/: .SRCINFO  PKGBUILD  PKGBUILD-git
profiles/developer/: profile.toml
profiles/minimal/: profile.toml
profiles/security-hardened/: profile.toml
profiles/security-minimal/: profile.toml
scripts/: archiso-bootstrap.sh  install.sh  test-apply.sh
scripts/lib/: common.sh  iron-hooks-common.sh
testing-outputs/hosts/: archlinux.toml
(+435 files in other folders)
