[workspace]
members = [
    "crates/iron-core",
    "crates/iron-cli",
    "crates/iron-tui",
    "crates/iron-fs",
    "crates/iron-pacman",
    "crates/iron-git",
    "crates/iron-systemd",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["laraj"]
license = "MIT"
repository = "https://github.com/laraj/iron"
description = "Declarative Arch Linux configuration management"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async
tokio = { version = "1.0", features = ["full"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Utilities
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.0"
directories = "5.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
which = "6.0"

# Git
git2 = "0.19"

# Testing
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.10"
