[package]
name = "iron-cli"
version.workspace = true
edition.workspace = true
description = "CLI interface for Iron"

[[bin]]
name = "iron"
path = "src/main.rs"

[dependencies]
iron-core = { path = "../iron-core" }
iron-tui = { path = "../iron-tui" }
iron-pacman = { path = "../iron-pacman" }
iron-systemd = { path = "../iron-systemd" }
clap.workspace = true
clap_complete = "4.5"
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono = { workspace = true, features = ["serde"] }
walkdir.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
