[package]
name = "iron-core"
version.workspace = true
edition.workspace = true
description = "Core domain logic for Iron"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
walkdir.workspace = true
dirs = "5.0"
tempfile = "3.10"
fs2 = "0.4"  # File locking for concurrent access safety
uuid = { version = "1.8", features = ["v4"] }  # For update session IDs
regex = "1.10"  # For parsing pacman output in progress tracking
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
tracing-appender.workspace = true
which.workspace = true

[dev-dependencies]
tempfile = "3.10"
proptest = "1.4"
