[package]
name = "iron-fs"
version.workspace = true
edition.workspace = true
description = "Filesystem operations for Iron"

[dependencies]
iron-core = { path = "../iron-core" }
chrono = { version = "0.4", features = ["serde"] }
toml.workspace = true
serde.workspace = true
walkdir.workspace = true
tempfile = "3.10"

[dev-dependencies]
tempfile = "3.10"
