[package]
name = "iron-tui"
version.workspace = true
edition.workspace = true
description = "TUI dashboard for Iron"

[dependencies]
iron-core = { path = "../iron-core" }
iron-git = { path = "../iron-git" }
iron-systemd = { path = "../iron-systemd" }
ratatui.workspace = true
crossterm.workspace = true
anyhow.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
